deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
  labels:
    app: service2
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
    - port: 5000
  selector:
    app: service2
